--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <title>Klaviyo CSAT</title>
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
-  <>
     <section class="header-container">
-      <!-- <a href="https://www.klaviyo.com/">
-        <img
-          src="https://d3k81ch9hvuctc.cloudfront.net/company/Edt86F/images/564499cb-92c5-4963-8f4e-afcb70e0ea37.png"
-          alt="klaviyo.com"
-        />
-      </a> -->
-
       <a href="https://www.klaviyo.com">
         <img
           src="https://d3k81ch9hvuctc.cloudfront.net/company/Edt86F/images/564499cb-92c5-4963-8f4e-afcb70e0ea37.png"
@@ -40,21 +32,21 @@
             <a
               href="https://survey.nicereply.com/klaviyo.csat/-/{{ticket.id}}?s=10"
             >
-              <img alt="Awesome" src="../img/smile.png"
+              <img alt="Awesome" src="../smile.png"
             /></a>
           </div>
           <div class="softbox softbox-5">
             <a
               href="https://survey.nicereply.com/klaviyo.csat/-/{{ticket.id}}?s=5""
             >
-              <img alt="Okay" src="../img/neutral.png"
+              <img alt="Okay" src="../neutral.png"
             /></a>
           </div>
           <div class="softbox softbox-3">
             <a
               href="https://survey.nicereply.com/klaviyo.csat/-/{{ticket.id}}?s=1""
             >
-              <img alt="Poor" src="../img/sad.png"
+              <img alt="Poor" src="../sad.png"
             /></a>
           </div>
         </div>
