--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
             <a
               href="https://survey.nicereply.com/klaviyo.csat/-/{{ticket.id}}?s=10"
             >
-              <img alt="Awesome" src="../smile.png"
+              <img alt="Awesome" src="../klaviyo-page/img/smile.png"
             /></a>
           </div>
           <div class="softbox softbox-5">
             <a
               href="https://survey.nicereply.com/klaviyo.csat/-/{{ticket.id}}?s=5""
             >
-              <img alt="Okay" src="../neutral.png"
+              <img alt="Okay" src="../klaviyo-page/img/neutral.png"
             /></a>
           </div>
           <div class="softbox softbox-3">
             <a
               href="https://survey.nicereply.com/klaviyo.csat/-/{{ticket.id}}?s=1""
             >
-              <img alt="Poor" src="../sad.png"
+              <img alt="Poor" src="../klaviyo-page/img/sad.png"
             /></a>
           </div>
         </div>
